# pymane

./: README.md  pyproject.toml  requirements.txt  run.py
pymane/: __init__.py  arena_team.py  armory.py  character.py  guild.py  log.py  page_cache.py  races.py  realms.py  session.py  skill.py  talents.py
pymane/statistics/: __init__.py  category.py  statistic.py
src/pymane/: character.py  error.py  log.py  page_cache.py  session.py  talents.py
src/pymane/statistics/: statistic.py
