[tool.poetry]
name = "pymane"
version = "0.0.1"
description = ""
authors = ["Shaun Ostoic <ostoic@uwindsor.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
trio = "^0.19"
loguru = "^0.6"
requests = "^2.27"
beautifulsoup4 = "^4.10"
requests-random-user-agent = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
