[tool.poetry]
name = "pymane"
version = "0.0.1"
description = ""
authors = ["Shaun Ostoic <ostoic@uwindsor.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
trio = "^0.20"
loguru = "^0.6"
requests = {version="^2", features=['socks']}
beautifulsoup4 = "^4"
requests-random-user-agent = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
